add contact links

--- a/src/components/blocks/Footer.astro
+++ b/src/components/blocks/Footer.astro
@@ -10,6 +10,11 @@ const footerLinks = [
 		href: "https://github.com/samantha-albrecht/portfolio-v2.0",
 		title: "View source on Github",
 	},
+	{
+		name: "Contact",
+		href: "mailto:hello@samanthaalbrecht.com",
+		title: "Contact Samantha",
+	},
 ];
 ---
 
