--- a/src/pages/actionable-marketing-institute.astro
+++ b/src/pages/actionable-marketing-institute.astro
@@ -224,7 +224,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<LargeContainer>
 							<img
 								src={courseDetails}
-								title="AMI Course details wireframe"
+								alt="AMI Course details wireframe"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -241,7 +241,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<LargeContainer>
 							<img
 								src={lessons}
-								title="AMI Course lessons wireframe"
+								alt="AMI Course lessons wireframe"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -258,7 +258,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<LargeContainer>
 							<img
 								src={planComparison}
-								title="Plan comparison wireframe"
+								alt="Plan comparison wireframe"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -284,7 +284,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<LargeContainer>
 							<img
 								src={courseCarousel}
-								title="AMI Pro course carousel wireframe"
+								alt="AMI Pro course carousel wireframe"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -317,7 +317,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<LargeContainer>
 							<img
 								src={illustrations}
-								title="Custom illustrations for Actionable Marketing Institute Courses"
+								alt="Custom illustrations for Actionable Marketing Institute Courses"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -341,7 +341,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<LargeContainer>
 							<img
 								src={proCourseCarousel}
-								title="AMI Pro course carousel"
+								alt="AMI Pro course carousel"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -384,7 +384,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<LargeContainer>
 							<img
 								src={mainView}
-								title="AMI Pro course carousel"
+								alt="AMI Pro course carousel"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
