--- a/src/pages/mychart.astro
+++ b/src/pages/mychart.astro
@@ -115,7 +115,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 						<LargeContainer>
 							<img
 								src={before}
-								title="Before screenshot"
+								alt="Before screenshot"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -170,12 +170,12 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 							<div class="grid gap-4 pb-8 pt-16 lg:grid-cols-2">
 								<img
 									src={wireframe1}
-									title="Low fidelity wireframe"
+									alt="Low fidelity wireframe"
 									class="border border-solid border-slate-200"
 								/>
 								<img
 									src={wireframe2}
-									title="Low fidelity wireframe"
+									alt="Low fidelity wireframe"
 									class="border border-solid border-slate-200"
 								/>
 							</div>
@@ -203,7 +203,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 						<LargeContainer>
 							<img
 								src={design}
-								title="High fidelity mockup"
+								alt="High fidelity mockup"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -242,7 +242,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 						<LargeContainer>
 							<img
 								src={heirarchy}
-								title="heirarchy"
+								alt="heirarchy"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -289,7 +289,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 						<LargeContainer>
 							<img
 								src={grid}
-								title="grid"
+								alt="grid"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -315,7 +315,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 						<LargeContainer>
 							<img
 								src={fonts}
-								title="Fonts"
+								alt="Fonts"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
@@ -349,7 +349,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 						<LargeContainer>
 							<img
 								src={accessibility}
-								title="accessibility"
+								alt="accessibility"
 								class="mb-8 mt-16 border border-solid border-slate-200"
 							/>
 						</LargeContainer>
