update linkedin url

--- a/src/components/blocks/Footer.astro
+++ b/src/components/blocks/Footer.astro
@@ -2,7 +2,7 @@
 const footerLinks = [
 	{
 		name: "LinkedIn",
-		href: "https://www.linkedin.com/in/samantha-albrecht-%F0%9F%91%A9%E2%80%8D%F0%9F%92%BB-998053156/",
+		href: "https://www.linkedin.com/in/samantha-albrecht-998053156/",
 		title: "Go to LinkedIn",
 	},
 	{
