--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -19,6 +19,54 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 					>
 						<svg
 							class="w-12"
+							viewBox="0 0 200 200"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<path
+								d="M106.456 104.87L105.564 121.606L116.325 130.61L114.895 134.376L104.856 131.502L103.412 137.987C103.412 137.987 101.657 138.312 99.9575 138.383C98.6974 138.426 96.6162 137.987 96.6162 137.987L95.1862 131.502L85.1338 134.376L83.7038 130.61L94.4641 121.606L93.5721 104.87L62.3531 109.005L59.663 103.78L93.4022 89.3813C93.4022 89.3813 93.4589 78.6068 93.6713 74.6142C93.8412 71.287 94.6623 61.6877 100.042 61.6735C105.394 61.6735 106.173 71.3578 106.357 74.6991C106.569 78.6918 106.683 89.3671 106.683 89.3671L140.408 103.766L137.704 108.991L106.485 104.856L106.456 104.87ZM186.62 150.007L135.367 135.353L150.021 186.606L112.955 148.308L100.014 200.014L87.0735 148.308L50.0212 186.606L64.6609 135.353L13.4221 150.007L51.7202 112.941L0 100L51.7061 87.0593L13.4079 49.9929L64.6468 64.6468L50.0071 13.3937L87.0593 51.7061L100 0L112.941 51.7061L150.007 13.3937L135.353 64.6468L186.606 49.9929L148.294 87.0593L200 100L148.294 112.941L186.606 150.007H186.62ZM149.342 100C149.342 72.7595 127.255 50.6725 100.014 50.6725C72.7736 50.6725 50.6725 72.7595 50.6725 100C50.6725 127.241 72.7595 149.342 100.014 149.342C127.269 149.342 149.342 127.255 149.342 100Z"
+								fill="#231F20"></path>
+						</svg>
+
+						<h3 class="text-xl font-medium">
+							ForeFlight <span class="font-light text-slate-600"
+								>a Boeing Company</span
+							>
+						</h3>
+						<p class="text-sm text-slate-600"></p>
+					</div>
+					<ul class="grid gap-y-10">
+						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
+							<div
+								class="grid grid-cols-2 items-baseline md:grid-cols-1 md:content-start"
+							>
+								<h4 class="font-medium leading-loose">Product Designer II</h4>
+								<p
+									class="justify-self-end text-xs leading-loose text-slate-600 md:justify-self-auto"
+								>
+									July 2023 &bull; Present
+								</p>
+							</div>
+							<div class="grid gap-y-4">
+								<p class="text-sm leading-loose">
+									Contribute to the development and enhancement of aviation
+									software through user-focused design in collaboration with
+									engineering and product teams.
+								</p>
+								<!-- <p class="text-sm leading-loose">
+									<span class="font-medium">Notable win:</span> redesigning an underperforming
+									website, resulting in a significant improvement in user experience.
+								</p> -->
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<div
+						class="mb-8 grid items-center gap-x-3 border-b border-solid border-slate-300 pb-2 md:grid-cols-[auto_1fr_auto]"
+					>
+						<svg
+							class="w-12"
 							xmlns="http://www.w3.org/2000/svg"
 							viewBox="0 0 200 200"
 						>
@@ -27,7 +75,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 								style={{ fill: "#d4765d" }}></path>
 						</svg>
 						<h3 class="text-xl font-medium">CoSchedule</h3>
-						<p class="text-sm text-slate-600">4+ years</p>
+						<p class="text-sm text-slate-600">4 years 4 months</p>
 					</div>
 					<ul class="grid gap-y-10">
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
@@ -38,7 +86,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 								<p
 									class="justify-self-end text-xs leading-loose text-slate-600 md:justify-self-auto"
 								>
-									April 2022 &bull; Present
+									April 2022 &bull; July 2023
 								</p>
 							</div>
 							<div class="grid gap-y-4">
