--- a/src/pages/actionable-marketing-institute.astro
+++ b/src/pages/actionable-marketing-institute.astro
@@ -118,7 +118,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									About the Actionable Marketing Institute
 								</h2>
 								<p>
-									The Actionable Marketing Institute (AMI) is a libarary of
+									The Actionable Marketing Institute (AMI) is a library of
 									courses that provide actionable insights and practical tips
 									for marketers to implement in their own marketing strategies.
 									Topics include content marketing, social media marketing,
@@ -132,7 +132,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									The CoSchedule marketing team had been building a library of
 									marketing courses on Teachable* over the past three years. The
 									courses are perfect for marketers looking for no-fluff
-									training, however the courses were highly under&nbsp;utilized.
+									training, however the courses were highly&nbsp;underutilized.
 								</p>
 								<p>
 									The constraints of the Teachable platform created a poor user
@@ -148,7 +148,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 								</p>
 								<p class="italic">
 									*Teachable is an all-in-one platform that helps you create and
-									sell course&nbsp;online.
+									sell courses&nbsp;online.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									Challenges
