--- a/src/pages/headline-studio-app.astro
+++ b/src/pages/headline-studio-app.astro
@@ -154,7 +154,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 										class="border border-solid border-slate-200"
 									/>
 									<img
-										src={wireframe2}
+										src={wireframe3}
 										alt="Low fideltiy wireframes"
 										class="border border-solid border-slate-200"
 									/>
@@ -310,7 +310,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									> by Don Norman. Norman emphasizes the importance of designing
 									for failure. This concept resonated with me, as I applied it to
 									ensure that the Headline AI feature would provide users with a
-									seamless experience, even in the event of unexpected errors or&nbsp;delays
+									seamless experience, even in the event of unexpected errors or&nbsp;delays.
 								</p>
 							</div>
 						</SmallContainer>
