--- a/src/pages/mychart.astro
+++ b/src/pages/mychart.astro
@@ -138,7 +138,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Research</h2>
 								<p>
 									To gain insights into MyChart's user experience, I usedG2
-									Crowd reviews to provided valuable feedback from real users.
+									Crowd reviews to provide valuable feedback from real users.
 									This research helped me to identify some common pain points,
 									strengths, and weaknesses of the app, which informed my design
 									decisions throughout this case&nbsp;study.
@@ -248,7 +248,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 						</LargeContainer>
 						<SmallContainer>
 							<div class="grid gap-y-4">
-								<h3 class="pt-8 text-xl font-medium lg:text-2xl">Heirarchy</h3>
+								<h3 class="pt-8 text-xl font-medium lg:text-2xl">Hierarchy</h3>
 								<p>The four main groups that make up the form are:</p>
 								<ul class="grid list-disc gap-y-2 pl-8">
 									<li>
